# weighted-correlation-velocimetry

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yml
docs/: implementation.md  index.md  theory.md  usage.md
examples/: __init__.py  plif_interactive_widget.py  workflow_example.py
scripts/: docs_build.sh  profile_velocity_map.py
tests/: test_bin_padding.py  test_bootstrap.py  test_edge_clip_single_seed.py  test_parameter_ensemble.py  test_streaming_map.py
wcv/: __init__.py  bootstrap.py  correlation.py  estimator_map.py  estimator_single_seed.py  geometry.py  interactive.py  legacy.py  parameter_ensemble.py  plotting.py  preprocess.py  types.py
